[package]
name = "todo_list"
version = "0.1.0"
authors = ["Austin Jones <ajone239@vols.utk.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.7.3"
termion = "1.5"
tui = "0.12"
unicode-segmentation = "1.2"
unicode-width = "0.1"
